# gov-ca-mcp

./: .dockerignore  .env.example  .gitignore  README.md  activate.sh  docker-compose.yml  pyproject.toml  requirements.txt  run_server.sh  validate.py
documentation/: ARCHITECTURE.md  DEPLOYMENT.md  GETTING_STARTED.md  SETUP_COMPLETE.md
gov_ca_transportation/: Dockerfile  __init__.py  api_client.py  http_client.py  server.py  types.py
gov_mcp/: Dockerfile  __init__.py  api_client.py  http_client.py  server.py  types.py
tests/: test_all.py  test_server.py  test_transit.py
