[build-system]
requires = ["setuptools>=65.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "gov-mcp-server"
version = "0.1.0"
description = "Model Context Protocol server for Canada's Open Government infrastructure data"
requires-python = ">=3.11"
dependencies = [
    "mcp>=0.1.0",
    "requests>=2.31.0",
    "pydantic>=2.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-asyncio>=0.21.0",
    "black>=23.0",
    "mypy>=1.0",
    "flake8>=6.0",
]

[project.scripts]
gov-mcp-server = "gov_mcp.server:main"
